@@ -7,6 +7,7 @@ Light-emitting helmets.
 Supports helmets from the following mods:
 - 3d_armor
 - technic_armor
+- xtraarmor
 
 ### Licensing:
 
@@ -42,6 +43,7 @@ Depends:
 Optional depends:
 - [default](https://github.com/minetest/minetest_game/blob/master/mods/default)
 - [technic_armor](https://github.com/stujones11/technic_armor)
+- [xtraarmor](https://forum.minetest.net/viewtopic.php?t=16645)
 
 ### Links:
 
