@@ -5,3 +5,4 @@ v1.0
 - helmets equipped to armor inventory will emit light
 - added light to helmets crafted from 3d_armor helmets
 - added light to helmets crafted from technic_armor helmets
+- added light to helmets crafted from xtraarmor helmets
